# cmake
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2 -DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "-Wall -W -g")

# project
SET(APP lq)
PROJECT(${APP})
SET(VERSION "0.1.2")

# application
ADD_EXECUTABLE(${APP} src/app.c src/ltsv4c.c)
TARGET_LINK_LIBRARIES(${APP})

# install
INSTALL_PROGRAMS(/bin FILES ${CMAKE_CURRENT_BINARY_DIR}/${APP})
